# event-management-platform

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f53dd3b5f99d_initial.py
backend/app/: api.py  main.py
backend/app/core/: config.py  db.py  exceptions.py  pagination.py  security.py
backend/app/crud/: event.py  registration.py  session.py  speaker.py  user.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  base.py  enums.py  event.py  registration.py  session.py  speaker.py  user.py
backend/app/routers/: auth.py  events.py  registrations.py  sessions.py  speakers.py  users.py
backend/app/schemas/: auth.py  enums.py  event.py  registration.py  session.py  speaker.py  user.py
backend/app/services/: auth.py  event.py  registration.py  session.py  speaker.py  user.py
backend/app/tests/: conftest.py  helpers.py  test_auth_flow.py  test_auth_guard.py  test_events.py  test_events_basic.py  test_events_crud.py  test_events_validation.py  test_registrations.py  test_sessions.py  test_sessions_crud.py  test_speakers.py  test_speakers_crud.py  test_users.py  test_users_me.py
frontend/: README.md  index.html  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js  endpoints.js
frontend/src/components/: Navbar.jsx  Toasts.jsx
frontend/src/pages/: EventDetail.jsx  EventForm.jsx  EventsList.jsx  Login.jsx  Profile.jsx  Register.jsx  bits.jsx
frontend/src/utils/: api.js  config.js  errorHandler.js
